# afar

./: .gitignore  Cargo.toml  README.md  terminal_crate_plan.md
.github/workflows/: ci.yml
examples/: fleet.rs  local_shell.rs  ssh_session.rs
src/: ansi.rs  lib.rs  live_multi.rs  multi_terminal.rs  runtime.rs
src/backend/: local.rs  mock.rs  mod.rs  ssh.rs
tests/: ansi.rs  live_multi.rs  multi_terminal.rs  spawn.rs  ssh_mock.rs
